# source-code-parser

./: Cargo.toml  Dockerfile  README.md  bench_out  go.go  msd_specification.md  ressa_specification.md
benches/: criterion.rs  iai.rs  laast_iai.rs  mem_bench.rs  ressa_criterion.rs  ressa_mem_bench.rs  temp.rs  test_constants.rs
benches/output/: init.sh  output.txt
benches/output/laast_deathstarbench/base/: estimates.json  raw.csv  sample.json  tukey.json
benches/output/laast_deathstarbench/change/: estimates.json
benches/output/laast_deathstarbench/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benches/output/laast_deathstarbench/report/: index.html
benches/output/laast_deathstarbench_mem/base/: raw.csv  sample.json  tukey.json
benches/output/laast_deathstarbench_mem/change/: estimates.json
benches/output/laast_deathstarbench_mem/new/: benchmark.json  estimates.json  tukey.json
benches/output/laast_deathstarbench_mem/report/: index.html
benches/output/laast_total_deathstarbench/base/: estimates.json  raw.csv  tukey.json
benches/output/laast_total_deathstarbench/change/: estimates.json
benches/output/laast_total_deathstarbench/new/: benchmark.json  estimates.json  raw.csv  sample.json
benches/output/laast_total_deathstarbench/report/: index.html
benches/output/laast_total_deathstarbench_mem/base/: benchmark.json  tukey.json
benches/output/laast_total_deathstarbench_mem/change/: estimates.json
benches/output/laast_total_deathstarbench_mem/new/: estimates.json  raw.csv  sample.json
benches/output/laast_total_deathstarbench_mem/report/: index.html
benches/output/laast_total_trainticket/base/: sample.json
benches/output/laast_total_trainticket/change/: estimates.json
benches/output/laast_total_trainticket/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benches/output/laast_total_trainticket/report/: index.html
benches/output/laast_total_trainticket_mem/base/: benchmark.json  raw.csv  tukey.json
benches/output/laast_total_trainticket_mem/change/: estimates.json
benches/output/laast_total_trainticket_mem/new/: estimates.json  raw.csv  sample.json
benches/output/laast_total_trainticket_mem/report/: index.html
benches/output/laast_trainticket/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benches/output/laast_trainticket/change/: estimates.json
benches/output/laast_trainticket/new/: estimates.json  raw.csv  sample.json  tukey.json
benches/output/laast_trainticket/report/: index.html
benches/output/laast_trainticket_mem/base/: estimates.json  raw.csv  sample.json  tukey.json
benches/output/laast_trainticket_mem/change/: estimates.json
benches/output/laast_trainticket_mem/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benches/output/laast_trainticket_mem/report/: index.html
benches/output/reessa_entity_trainticket/base/: benchmark.json  raw.csv  tukey.json
benches/output/reessa_entity_trainticket/change/: estimates.json
benches/output/reessa_entity_trainticket/new/: estimates.json  sample.json
benches/output/reessa_entity_trainticket/report/: index.html
benches/output/report/: index.html
benches/output/ressa_endpoint_deathstarbench_call_graph/: bench_out
benches/output/ressa_endpoint_deathstarbench_call_graph/base/: estimates.json  raw.csv  sample.json  tukey.json
benches/output/ressa_endpoint_deathstarbench_call_graph/change/: estimates.json
benches/output/ressa_endpoint_deathstarbench_call_graph/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benches/output/ressa_endpoint_deathstarbench_call_graph/report/: index.html
benches/output/ressa_endpoint_deathstarbench_call_graph_mem/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
benches/output/ressa_endpoint_deathstarbench_call_graph_mem/new/: estimates.json  raw.csv  tukey.json
benches/output/ressa_entity_trainticket/new/: raw.csv  (+4 more)
msd_examples/: deathstarbench_msd.json  deathstarbench_msd_entity.json  deathstarbench_msd_entity_simple.json  mongoQueryEntityScraper.rn  trainticket_msd.json
ressa_examples/: deathstarbench_ressa_endpoint.json  deathstarbench_ressa_endpoint_simple.json  deathstarbench_ressa_entity.json  deathstarbench_ressa_entity_simple.json  mongoQueryEntityScraper.rn  reproducibility_tests.postman_collection.json  trainticket_ressa_endpoint.json  trainticket_ressa_entity.json
ressa_output/: deathstarbench_endpoints.json  deathstarbench_endpoints_simple.json  deathstarbench_entities.json  train_endpoints.json  train_entities.json
ressa_output/ground_truths/: dsb_endpoint_groundTruth.json  dsb_entity_groundTruth.json  tt_endpoint_groundTruth.json  tt_entity_groundTruth.json
source-code-parser-macro/: Cargo.toml
source-code-parser-macro-test/: Cargo.toml
source-code-parser-macro-test/tests/: fields_and_lang.rs  test.rs
source-code-parser-macro/src/: child_fields.rs  lib.rs  node_language.rs  util.rs
source-code-parser-macro/tests/: child_fields.rs  test.rs
source-code-parser-web/: Cargo.toml
source-code-parser-web/src/: main.rs  routes.rs
src/: lib.rs  parse.rs
src/ast/: expr.rs  mod.rs  op.rs  stmt.rs
src/communication/: expr.rs  mod.rs  stmt.rs
src/lang/: cpp.rs  java.rs  mod.rs
src/lang/cpp/: body.rs  expr.rs  mod.rs  stmt.rs
src/lang/go/: body.rs  class_def.rs  expr.rs  function_def.rs  mod.rs  stmt.rs
src/lang/java/: body.rs  class_def.rs  method_def.rs  mod.rs  modifier.rs  stmt.rs  util.rs  vartype.rs
src/lang/js/: class_def.rs  method_def.rs  mod.rs  modifier.rs
src/lang/py/: class_def.rs  function_def.rs  method_def.rs  mod.rs
src/msd/: callback.rs  context.rs  explorer.rs  interpreter.rs  mod.rs  node_pattern.rs  parser.rs  pattern_parser.rs
src/prophet/: compat.rs  component.rs  context.rs  mod.rs  model.rs
src/ressa/: callback.rs  context.rs  explorer.rs  index.rs  mod.rs  node_pattern.rs  pattern.rs  pattern_parser.rs  result.rs
src/ressa/constraints/: check.rs  coerce.rs  compute_idents.rs  find_vars.rs  mod.rs  stringify.rs  types.rs  util.rs
(+131 files in other folders)
