[package]
name = "source-code-parser"
version = "0.1.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis = "0.0.18"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
derive_more = "0.99.11"
derive-new = "0.5.8"
itertools = "0.10.0"
enum_dispatch = "0.3.5"
regex = "1.5.3"
rune = "0.9.0"

[workspace]
members = ["source-code-parser-web"]
