[package]
name = "source-code-parser"
version = "0.1.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis = "0.0.18"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
derive_more = "0.99.11"
derive-new = "0.5.8"
itertools = "0.10.0"
enum_dispatch = "0.3.5"
regex = "1.5.3"
# rune = "0.9.1"
rune = { git = "https://github.com/rune-rs/rune", rev = "f002e48" }
# runestick = "0.9.1"
runestick = { git = "https://github.com/rune-rs/rune", rev = "f002e48" }
once_cell = "1.7.2"
tracing = "0.1.26"
source-code-parser-macro = { path = "source-code-parser-macro" }
bitmaps = "3.1.0"
by_address = "1.0.4"

[target.'cfg(unix)'.dev-dependencies]
iai = "0.1.1"
criterion = { version = "0.3.4", features = ["real_blackbox"] }
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"
statistical = "1.0.0"
pprof = { version = "0.5.0", features = ["flamegraph", "criterion"] }

[workspace]
members = [
    "source-code-parser-web", 
    "source-code-parser-macro", 
    "source-code-parser-macro-test"
]

[[bench]]
name = "iai"
harness = false

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "mem_bench"
harness = false