[package]
name = "source-code-parser-web"
version = "0.1.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-code-parser = { path = ".." }
rust-code-analysis = "0.0.18"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
actix-web = "3.3.2"
structopt = "0.3.21"
env_logger = "0.8.3"