[package]
name = "source-code-parser-web"
version = "0.1.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-code-parser = { path = ".." }
rust-code-analysis = "0.0.18"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
actix-web = "4.0.0-rc.3"
clap = { version = "3.0.13", features = ["derive"] }
env_logger = "0.8.3"
tracing = { version = "0.1.29", features = ["log"] }
